# AlphaAudit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  run_all.py
anomaly_audit/: __init__.py  config.py
anomaly_audit/core/: __init__.py  decay.py  metrics.py  multiple_testing.py  pbo.py  regimes.py  sharpe.py
anomaly_audit/data/: __init__.py  dataset.py  download.py  loaders.py  synthetic.py
anomaly_audit/pipeline/: __init__.py  run.py
anomaly_audit/report/: __init__.py  build_report.py
anomaly_audit/viz/: __init__.py  figures.py
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/public/: results.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: AnomalyDetail.tsx  DecaySection.tsx  EquityCurve.tsx  ExplorerSection.tsx  Footer.tsx  FunnelSection.tsx  Hero.tsx  MultipleTestingSection.tsx  NavBar.tsx  PBOSection.tsx  RegimeSection.tsx  ui.tsx
dashboard/src/hooks/: useCountUp.ts  useResults.ts
dashboard/src/lib/: format.ts
notebooks/: 00_walkthrough.ipynb
results/: REPORT.md  summary_table.csv
tests/: test_multiple_testing.py  test_pbo.py  test_pipeline.py  test_sharpe.py
